Вносить всі виправлення

--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -4,87 +4,87 @@
 
     <ul class="contacts__list">
       <li class="contacts__item">
-        <span class="contacts__accent">CAFE</span>
+        <p class="contacts__accent">CAFE</p>
         <p class="contacts__uppertext">Chicago</p>
         <p class="contacts__text">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
 
         <ul class="contacts__wrapper">
-          <li class="contacts__element">Monday - Friday</li>
           <li class="contacts__element">
+            <p>Monday - Friday</p>
             <p class="contacts__time"><time>06:00</time> AM - <time>10:00</time> PM</p>
           </li>
-          <li class="contacts__element">Saturday - Sunday</li>
+
           <li class="contacts__element">
+            <p>Saturday - Sunday</p>
             <p class="contacts__time"><time>08:00</time> AM - <time>16:00</time> PM</p>
           </li>
         </ul>
 
-        <address class="adress">
-          <ul class="adress__list">
-            <li class="adress__item">
-              <a class="adress__link" href="tel:+61(0)383766284 ">+61(0)383766284</a>
-            </li>
-            <li class="adress__item">
-              <a class="adress__link" href="mailto:noreply@envato.com">noreply@envato.com</a>
-            </li>
-          </ul>
-        </address>
+        <ul class="adress">
+          <li class="adress__list">
+            <a class="adress__link" href="tel:+61(0)383766284 ">+61(0)383766284</a>
+          </li>
+
+          <li class="adress__list">
+            <a class="adress__link" href="mailto:noreply@envato.com">noreply@envato.com</a>
+          </li>
+        </ul>
       </li>
 
       <li class="contacts__item">
-        <span class="contacts__accent contacts__accent--another">FOODTRUCK</span>
+        <p class="contacts__accent contacts__accent--another">FOODTRUCK</p>
         <p class="contacts__uppertext">Los Angeles</p>
         <p class="contacts__text">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
 
         <ul class="contacts__wrapper">
-          <li class="contacts__element">Monday - Friday</li>
           <li class="contacts__element">
+            <p>Monday - Friday</p>
             <p class="contacts__time"><time>06:00</time> AM - <time>10:00</time> PM</p>
           </li>
-          <li class="contacts__element">Saturday - Sunday</li>
+
           <li class="contacts__element">
+            <p>Saturday - Sunday</p>
             <p class="contacts__time"><time>08:00</time> AM - <time>16:00</time> PM</p>
           </li>
         </ul>
 
-        <address class="adress">
-          <ul class="adress__list">
-            <li class="adress__item">
-              <a class="adress__link" href="tel:+61(0)383766284 ">+61(0)383766284</a>
-            </li>
-            <li class="adress__item">
-              <a class="adress__link" href="mailto:noreply@envato.com">noreply@envato.com</a>
-            </li>
-          </ul>
-        </address>
+        <ul class="adress">
+          <li class="adress__list">
+            <a class="adress__link" href="tel:+61(0)383766284 ">+61(0)383766284</a>
+          </li>
+
+          <li class="adress__list">
+            <a class="adress__link" href="mailto:noreply@envato.com">noreply@envato.com</a>
+          </li>
+        </ul>
       </li>
 
       <li class="contacts__item">
-        <span class="contacts__accent">CAFE</span>
+        <p class="contacts__accent">CAFE</p>
         <p class="contacts__uppertext">New York</p>
         <p class="contacts__text">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
 
         <ul class="contacts__wrapper">
-          <li class="contacts__element">Monday - Friday</li>
           <li class="contacts__element">
+            <p>Monday - Friday</p>
             <p class="contacts__time"><time>06:00</time> AM - <time>10:00</time> PM</p>
           </li>
-          <li class="contacts__element">Saturday - Sunday</li>
+
           <li class="contacts__element">
+            <p>Saturday - Sunday</p>
             <p class="contacts__time"><time>08:00</time> AM - <time>16:00</time> PM</p>
           </li>
         </ul>
 
-        <address class="adress">
-          <ul class="adress__list">
-            <li class="adress__item">
-              <a class="adress__link" href="tel:+61(0)383766284 ">+61(0)383766284</a>
-            </li>
-            <li class="adress__item">
-              <a class="adress__link" href="mailto:noreply@envato.com">noreply@envato.com</a>
-            </li>
-          </ul>
-        </address>
+        <ul class="adress">
+          <li class="adress__list">
+            <a class="adress__link" href="tel:+61(0)383766284 ">+61(0)383766284</a>
+          </li>
+
+          <li class="adress__list">
+            <a class="adress__link" href="mailto:noreply@envato.com">noreply@envato.com</a>
+          </li>
+        </ul>
       </li>
     </ul>
 
