--- a/src/partials/components/popap.html
+++ b/src/partials/components/popap.html
@@ -1,4 +1,4 @@
-<div class="modal" data-modal="5">
+<div class="modal" data-modal="sale">
   <div class="modal-container">
     <p class="modal-container__title">Order ice cream</p>
     <form name="modal-form" class="modal-form">
