--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,4 +1,4 @@
-<section class="footer">
+<footer class="footer">
     <div class="container footer__container">
         <div class="footer__title-wrapper">
                     <p class="footer__title--pink">homemade ice cream made</p>
@@ -35,4 +35,4 @@
         </div>
     </div>
     <p class="footer__copyright">&copy; 2022 - IceCream. All Rights Reserved.</p>
-</section>
+</footer>
