--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,126 +1,31 @@
-<section class="advantages section">
+<section class="advantages section" id="advantages">
   <div class="container">
     <h2 class="advantages__title section__title visually-hidden">advantages</h2>
     <ul class="advantages__list">
       <li class="advantages__item">
-        <picture>
-          <source
-            srcset="images/advantages/l/icon_1.webp 1x, images/advantages/l/icon_1@2x.webp 2x"
-            media="(min-width: 1280px)"
-            type="image/webp"
-          />
-          <source
-            srcset="images/advantages/l/icon_1.png 1x, images/advantages/l/icon_1@2x.png 2x"
-            media="(min-width: 1280px)"
-            type="image/png"
-          />
-          <source
-            srcset="images/advantages/m/icon_1.webp 1x, images/advantages/m/icon_1@2x.webp 2x"
-            media="(min-width: 768px)"
-            type="image/webp"
-          />
-          <source
-            srcset="images/advantages/m/icon_1.png 1x, images/advantages/m/icon_1@2x.png 2x"
-            media="(min-width: 768px)"
-            type="image/png"
-          />
-          <source
-            srcset="images/advantages/s/icon_1.webp 1x, images/advantages/s/icon_1@2x.webp 2x"
-            media="(max-width: 767px)"
-            type="image/webp"
-          />
-          <source
-            srcset="images/advantages/s/icon_1.png 1x, images/advantages/s/icon_1@2x.png 2x"
-            media="(max-width: 767px)"
-            type="image/png"
-          />
-          <img src="images/advantages/s/icon_1.png" alt="picture about milk"  class="advantages__pic"/>
-        </picture>
-        <div class="advantages__calc"><span class="advantages__calc-num"> 720</span></div>
-        <div class="advantages__descripton">
-          Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
-        </div>
+        <p class="advantages__calc">
+          <span class="advantages__calc-num"> 720</span><br />
+          <span class="advantages__descripton">
+            Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
+          </span>
+        </p>
       </li>
       <li class="advantages__item">
-        <picture>
-          <source
-            srcset="images/advantages/l/icon_2.webp 1x, images/advantages/l/icon_2@2x.webp 2x"
-            media="(min-width: 1280px)"
-            type="image/webp"
-          />
-          <source
-            srcset="images/advantages/l/icon_2.png 1x, images/advantages/l/icon_2@2x.png 2x"
-            media="(min-width: 1280px)"
-            type="image/png"
-          />
-          <source
-            srcset="images/advantages/m/icon_2.webp 1x, images/advantages/m/icon_2@2x.webp 2x"
-            media="(min-width: 768px)"
-            type="image/webp"
-          />
-          <source
-            srcset="images/advantages/m/icon_2.png 1x, images/advantages/m/icon_2@2x.png 2x"
-            media="(min-width: 768px)"
-            type="image/png"
-          />
-          <source
-            srcset="images/advantages/s/icon_2.webp 1x, images/advantages/s/icon_2@2x.webp 2x"
-            media="(max-width: 767px)"
-            type="image/webp"
-          />
-          <source
-            srcset="images/advantages/s/icon_2.png 1x, images/advantages/s/icon_2@2x.png 2x"
-            media="(max-width: 767px)"
-            type="image/png"
-          />
-          <img src="images/advantages/s/icon_2.png" alt="picture"  class="advantages__pic"/>
-        </picture>
-        <div class="advantages__calc"><span class="advantages__calc-num">14</span>kg</div>
-        <div class="advantages__descripton">
-          Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
-        </div>
+        <p class="advantages__calc">
+          <span class="advantages__calc-num">14</span>kg<br />
+          <span class="advantages__descripton">
+            Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
+          </span>
+        </p>
       </li>
       <li class="advantages__item">
-        <picture>
-          <source
-            srcset="images/advantages/l/icon_3.webp 1x, images/advantages/l/icon_3@2x.webp 2x"
-            media="(min-width: 1280px)"
-            type="image/webp"
-          />
-          <source
-            srcset="images/advantages/l/icon_3.png 1x, images/advantages/l/icon_3@2x.png 2x"
-            media="(min-width: 1280px)"
-            type="image/png"
-          />
-          <source
-            srcset="images/advantages/m/icon_3.webp 1x, images/advantages/m/icon_3@2x.webp 2x"
-            media="(min-width: 768px)"
-            type="image/webp"
-          />
-          <source
-            srcset="images/advantages/m/icon_3.png 1x, images/advantages/m/icon_3@2x.png 2x"
-            media="(min-width: 768px)"
-            type="image/png"
-          />
-          <source
-            srcset="images/advantages/s/icon_3.webp 1x, images/advantages/s/icon_3@2x.webp 2x"
-            media="(max-width: 767px)"
-            type="image/webp"
-          />
-          <source
-            srcset="images/advantages/s/icon_3.png 1x, images/advantages/s/icon_3@2x.png 2x"
-            media="(max-width: 767px)"
-            type="image/png"
-          />
-          <img src="images/advantages/s/icon_3.png" alt="picture"  class="advantages__pic" />
-        </picture>
-        <div class="advantages__calc"><span class="advantages__calc-num">84</span></div>
-        <div class="advantages__descripton">
-          Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
-        </div>
+        <p class="advantages__calc">
+          <span class="advantages__calc-num">84</span><br />
+          <span class="advantages__descripton">
+            Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
+          </span>
+        </p>
       </li>
     </ul>
   </div>
-
-
 </section>
