--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -35,7 +35,7 @@
                 <use class="icon-cloze" href="/images/icons.svg#icon-close"></use>
             </svg>
         </button>
-        <button class="header__button js-open-modal" data-modal="2" type="button">Buy now
+        <button class="header__button js-open-modal" data-modal="sale" type="button">Buy now
             <svg class="header__svg">
                 <use href="/images/icons.svg#icon-white-button"></use>
             </svg>
