--- a/src/partials/components/popap.html
+++ b/src/partials/components/popap.html
@@ -64,12 +64,12 @@
             <span >Agreement</span>
           </a>
       </div>
-      <button type="submit" class="red-button modal-form__centr">
+      <button type="submit" class="button--red modal-form__button   modal-form__centr">
         <span class="modal-form__buttonname">SEND</span>
       </button>
     </form>
 
-    <button type="button" class="modal-container__closed" data-modal-close>
+    <button type="button" class=" modal-container__closed" data-modal-close>
       <svg class="modal-container__icon js-modal-close">
         <use href="./images/icons.svg#icon-modal-closed"></use>
       </svg>
