--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,38 +1,44 @@
-<section class="footer">
-    <div class="container footer__container">
-        <div class="footer__title-wrapper">
-                    <p class="footer__title--pink">homemade ice cream made</p>
-                    <p class="footer__title--red">with passion</p>
-        </div>
-        <div class="footer__contacts-wrapper">
-            <ul class="socials list">
-                <li class="socials__item">
-                    <a href="https://github.com/" class="link socials__link" target="_blank" rel="noopener noreferrer">
-                        <svg class="socials__icon">
-                            <use href="images/icons.svg#icon-github"></use>
-                        </svg>
-                    </a>
-                </li>
-                <li class="socials__item">
-                    <a href="https://t.me/s/startsomethingnow" class="link socials__link" target="_blank" rel="noopener noreferrer">
-                        <svg class="socials__icon">
-                            <use href="images/icons.svg#icon-telegram"></use>
-                        </svg>
-                    </a>
-                </li>
-                <li class="socials__item">
-                    <a href="https://www.facebook.com/" class="link socials__link" target="_blank" rel="noopener noreferrer">
-                        <svg class="socials__icon">
-                            <use href="images/icons.svg#icon-facebook"></use>
-                        </svg>
-                    </a>
-                </li>
-            </ul>
-            <p class="footer__tel">
-                Feel free to contact
-                <a class="footer__tel-link link" rel="stylesheet" href="tel:+610383766284">+61 (0) 383 766 284</a>
+<footer class="footer">
+    <div class="container">
+        <div class="footer__content">
+            <p class="footer__title">
+                <span class="footer__title--pink">homemade ice cream made</span>
+                <span class="footer__title--red">with passion</span>
             </p>
+            <div class="footer__contacts-wrapper">
+                <ul class="socials list">
+                    <li class="socials__item">
+                        <a href="https://github.com/" class="link socials__link" target="_blank" rel="noopener noreferrer">
+                            <svg class="socials__icon">
+                                <use href="images/icons.svg#icon-github"></use>
+                            </svg>
+                            <p class="visually-hidden">github</p>
+                        </a>
+                    </li>
+                    <li class="socials__item">
+                        <a href="https://t.me/s/startsomethingnow" class="link socials__link" target="_blank"
+                            rel="noopener noreferrer">
+                            <svg class="socials__icon">
+                                <use href="images/icons.svg#icon-telegram"></use>
+                            </svg>
+                            <p class="visually-hidden">telegram</p>
+                        </a>
+                    </li>
+                    <li class="socials__item">
+                        <a href="https://www.facebook.com/" class="link socials__link" target="_blank" rel="noopener noreferrer">
+                            <svg class="socials__icon">
+                                <use href="images/icons.svg#icon-facebook"></use>
+                            </svg>
+                            <p class="visually-hidden">facebook</p>
+                        </a>
+                    </li>
+                </ul>
+                <p class="footer__tel">
+                    Feel free to contact
+                    <a class="footer__tel-link link" rel="stylesheet" href="tel:+610383766284">+61 (0) 383 766 284</a>
+                </p>
+            </div>
         </div>
+        <p class="footer__copyright">&copy; 2022 - IceCream. All Rights Reserved.</p>
     </div>
-    <p class="footer__copyright">&copy; 2022 - IceCream. All Rights Reserved.</p>
-</section>
+</footer>
