--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -1,4 +1,5 @@
 .footer {
+    position: relative;
     padding-top: 40px;
     background-color: $section-color;
 
@@ -6,7 +7,7 @@
         padding-top: 60px;
     }
 
-    &__container {
+    &__content {
         margin-bottom: 40px;
 
         @include mq (tablet) {
@@ -20,60 +21,79 @@
         }
     }
 
-    &__title-wrapper {
+    &__title {
         font-family: 'Titan One';
         text-transform: uppercase;
 
         @include mq (mobile-only) {
-            width: 232px;
+            max-width: 232px;
             margin-bottom: 40px;
         }
 
         @include mq (tablet-only) {
             width: 340px;
         }
-    }
 
-    &__title--pink {
-        margin-bottom: 16px;
-        font-size: 18px;
-        line-height: 1.17;
-        color: $color-font-span;
+        &--pink {
+            display: block;
+            margin-bottom: 16px;
+            font-size: 18px;
+            line-height: 1.17;
+            color: $color-font-span;
 
-        @include mq (tablet) {
-            margin-bottom: 12px;
-            font-size: 26px;
+            @include mq (tablet) {
+                margin-bottom: 12px;
+                font-size: 26px;
+                line-height: 1.15;
+                letter-spacing: 0.04em;
+            }
+
+            @include mq (desktop) {
+                margin-bottom: 16px;
+                font-size: 30px;
+                line-height: 1.13;
+            }
+        }
+
+        &--red {
+            display: block;
+            font-size: 34px;
             line-height: 1.15;
             letter-spacing: 0.04em;
-        }
+            color: $color-font-red;
 
-        @include mq (desktop) {
-            margin-bottom: 16px;
-            font-size: 30px;
-            line-height: 1.13;
-        }
-    }
+            @include mq (tablet) {
+                font-size: 48px;
+                letter-spacing: 0.06em;
+            }
 
-    &__title--red {
-        font-size: 34px;
-        line-height: 1.15;
-        letter-spacing: 0.04em;
-        color: $color-font-red;
-
-        @include mq (tablet) {
-            font-size: 48px;
-            letter-spacing: 0.06em;
-        }
-
-        @include mq (desktop) {
-            font-size: 58px;
-            line-height: 1.14;
+            @include mq (desktop) {
+                font-size: 58px;
+                line-height: 1.14;
+            }
         }
     }
-    
+
     &__contacts-wrapper {
         display: flex;
         flex-direction: column;
+    }
+
+    &::before {
+        position: absolute;
+        bottom: 78px;
+        left: 0;
+
+        content: '';
+        display: block;
+        width: 100%;
+        height: 1px;
+
+        background-color: #E1E1E1;
+
+        @include mq (tablet) {
+            bottom: 42px;
+        }
     }
 
     &__copyright {
@@ -86,14 +106,16 @@
 
         color: #907E82;
 
-        border-top: 1px solid #E1E1E1;
-
         @include mq (mobile-only) {
-            padding: 16px 92px 20px 92px;
+            max-width: 140px;
+            padding-top: 16px;
+            padding-bottom: 20px;
+            margin: 0 auto;
         }
 
         @include mq (tablet) {
-            padding: 8px;
+            padding-top: 8px;
+            padding-bottom: 8px;
 
             line-height: 1.86;
             letter-spacing: 0.02em;
