--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -2,10 +2,9 @@
 <div class="about__overlay--left">
     <div class="about__overlay--right">
             <div class="container">
-                <h2 class="section__title">
-                    <span class="section__subtitle">tradition and love</span>
-                    how it’s made?
-                </h2>
+                <p class="section__label">tradition and love</p>
+                <h2 class="section__title">how it’s made?</h2>
+
                 <div class="about__content">
                     <picture>
                         <source srcset="
