--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -55,6 +55,7 @@ background-repeat: no-repeat;
   //// Ретінізація фонових зображень + підтримка формату webp
   @include mq(mobile-only) {
     background-position: right 534px;
+    //574-40=534
 
     background-image: url(../images/about/bgi/s/bgi-milk--right.png);
     background-image: -webkit-image-set(url(../images/about/bgi/s/bgi-milk--right.webp) 1x);
@@ -113,27 +114,27 @@ background-repeat: no-repeat;
 }
 
 .about__textContent{
-    margin-top: 40px;
-    margin-left: 5px;
-    max-width: calc(100% - 70px);
+    padding-top: 40px;
+    padding-left: 5px;
+    max-width: calc(100% - 65px);
 
     font-family: 'DM Sans';
     color: $color-font-second;
 
     @media screen and (min-width: 400px) {
-        margin-left: 30px;
-        max-width: calc(100% - 90px);
+        padding-left: 30px;
+        max-width: calc(100% - 60px);
       }
 
     @include mq(tablet) {
-      margin-left: 32px;
-      max-width: 334px;
+      padding-left: 32px;
+      max-width: 366px;
       }
     
       @include mq(desktop) {
-        margin-top: 90px;
-        margin-left: 139px;
-        max-width: 463px;
+        padding-top: 90px;
+        padding-left: 139px;
+        max-width: 602px;
       }
 
 }
