--- a/src/partials/components/popap.html
+++ b/src/partials/components/popap.html
@@ -37,7 +37,7 @@
         <label for="modal-form-mail" class="modal-form__lable">Почта</label>
         <div class="modal-form__box">
           <input
-            type="mail"
+            type="email"
             name="modal-form-mail"
             class="modal-form__input modal-form-mail"
             id="modal-form-mail"
@@ -55,21 +55,20 @@
           class="modal-form__check"
           id="modal-form__check"
           name="modal-form__check"
-          placeholder=""
         />
-        <label for="modal-form__check" class="modal-form__check-lable"
-          > <span class="modal-form__legaltxt"> I agree with the newsletter and accept</span>
-         </label>
-          <a class="modal-form__legal" href="#">
-            <span >Agreement</span>
-          </a>
+        <label for="modal-form__check" class="modal-form__check-lable">
+          <span class="modal-form__legaltxt"> I agree with the newsletter and accept</span>
+        </label>
+        <a class="modal-form__legal" href="#">
+          <span>Agreement</span>
+        </a>
       </div>
-      <button type="submit" class="button--red modal-form__button   modal-form__centr">
+      <button type="submit" class="button--red modal-form__button modal-form__centr">
         <span class="modal-form__buttonname">SEND</span>
       </button>
     </form>
 
-    <button type="button" class=" modal-container__closed" data-modal-close>
+    <button type="button" class="modal-container__closed" data-modal-close>
       <svg class="modal-container__icon js-modal-close">
         <use href="./images/icons.svg#icon-modal-closed"></use>
       </svg>
@@ -88,7 +87,7 @@
             type="text"
             name="modal-form__name"
             class="modal-form__input modal-form__name"
-            id="modal-form__name"
+            id="modal-form__name-2"
             placeholder=""
           />
           <svg class="modal-form__icon" width="18px" height="18px">
@@ -104,7 +103,7 @@
             type="tel"
             name="modal-form__tel"
             class="modal-form__input modal-form__tel"
-            id="modal-form__tel"
+            id="modal-form__tel-2"
             placeholder=""
           />
           <svg class="modal-form__icon" width="18px" height="18px">
@@ -116,10 +115,10 @@
         <label for="modal-form-mail" class="modal-form__lable">Почта</label>
         <div class="modal-form__box">
           <input
-            type="mail"
-            name="modal-form-mail"
+            type="email"
+            name="modal-form-mail-2"
             class="modal-form__input modal-form-mail"
-            id="modal-form-mail"
+            id="modal-form-mail-2"
             placeholder=""
           />
           <svg class="modal-form__icon" width="18px" height="18px">
@@ -132,16 +131,15 @@
         <input
           type="checkbox"
           class="modal-form__check"
-          id="modal-form__check"
+          id="modal-form__check-2"
           name="modal-form__check"
-          placeholder=""
         />
-        <label for="modal-form__check" class="modal-form__check-lable"
-          > <span class="modal-form__legaltxt"> Соглашаюсь с рассылкой и принимаю</span>
-         </label>
-          <a class="modal-form__legal" href="#">
-            <span >Условия договора</span>
-          </a>
+        <label for="modal-form__check" class="modal-form__check-lable">
+          <span class="modal-form__legaltxt"> Соглашаюсь с рассылкой и принимаю</span>
+        </label>
+        <a class="modal-form__legal" href="#">
+          <span>Условия договора</span>
+        </a>
       </div>
       <button type="submit" class="red-button modal-form__centr">
         <span class="modal-form__buttonname">Отправить</span>
