--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -4,36 +4,19 @@
       <a class="header-logo" href="/index.html">
         <picture>
           <source
-            srcset="images/header/logos.webp 1x, images/header/logos@2x.webp 2x"
-            media="(min-width: 1280px)"
-            type="image/webp"
-          />
+            srcset="images/header/logos.webp 1x, images/header/logos@2x.webp 2x" media="(min-width: 1280px)" type="image/webp"/>
           <source
-            srcset="images/header/logos.png 1x, images/header/logos@2x.png 2x"
-            media="(min-width: 1280px)"
-            type="image/jpeg"
-          />
+            srcset="images/header/logos.png 1x, images/header/logos@2x.png 2x" media="(min-width: 1280px)" type="image/jpeg"/>
           <source
-            srcset="images/header/logos.webp 1x, images/header/logos@2x.webp 2x"
-            media="(min-width: 767px)"
-            type="image/webp"
-          />
+            srcset="images/header/logos.webp 1x, images/header/logos@2x.webp 2x" media="(min-width: 767px)" type="image/webp"/>
           <source
-            srcset="images/header/logos.png 1x, images/header/logos@2x.png 2x"
-            media="(min-width: 767px)"
-            type="image/jpeg"
-          />
+            srcset="images/header/logos.png 1x, images/header/logos@2x.png 2x" media="(min-width: 767px)" type="image/jpeg"/>
           <source
-            srcset="images/header/logos.webp 1x, images/header/logos@2x.webp 2x"
-            media="(max-width: 768px)"
-            type="image/webp"
-          />
+            srcset="images/header/logos.webp 1x, images/header/logos@2x.webp 2x" media="(max-width: 768px)" type="image/webp"/>
           <source
-            srcset="images/header/logos.png 1x, images/header/logos@2x.png 2x"
-            media="(max-width: 768px)"
-            type="image/jpeg"
-          />
-          <img src="images/header/logos.png" alt="logo ICECREAM" /> </picture
+            srcset="images/header/logos.png 1x, images/header/logos@2x.png 2x" media="(max-width: 768px)" type="image/jpeg"/>
+          <img src="images/header/logos.png" alt="logo ICECREAM" />
+           </picture
         ><span class="logo-text">ICECREAM</span>
       </a>
     </div>
@@ -70,7 +53,7 @@
     </button>
   </div>
   <div class="mobile-menu" data-menu>
-    <button class="mobile-button js-open-modal" data-modal="2" type="button">
+    <button class="mobile-button js-open-modal" data-modal="sale" type="button">
       Buy now
       <svg class="header__svg">
         <use href="/images/icons.svg#icon-white-button"></use>
