--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -1,12 +1,14 @@
 .header.section {
   @include section-class(0, 0);
-
+   padding-top: 8px;
   @include mq(mobile) {
     @include section-class(0, 0);
+    padding-top: 8px;
   }
 
   @include mq(tablet) {
     @include section-class(0, 0);
+    padding-top: 32px;
   }
 
   @include mq(desktop) {
@@ -191,7 +193,7 @@
 .mobile-button {
   margin-top: 60px;
   margin-bottom: 19px;
-  display: block;
+  display: inline-block;
   justify-content: center;
   align-items: center;
   padding: 12px 49px 11px 53px;
@@ -205,6 +207,12 @@
   font-weight: 700;
   font-size: 16px;
   line-height: 1.3;
+  white-space: nowrap;
+  color: $color-font-red;
+  
+    
+  
+  
 
   &:focus {
     background-color: $white-btn-bgc--active;
@@ -216,34 +224,40 @@
 }
 
 .mobile-menu {
+  
+  display: block;
   z-index: 11;
   position: fixed;
   top: 0;
-  left: 0;
   display: flex;
   flex-direction: column;
   background: $menu-color;
   z-index: 10;
-  width: 100%;
+  height: 100%;
   opacity: 0;
-  // transform: scale(0);
+  
   transition: 450ms $functional-cubic;
   transform: translateX(100%);
+  width: 250px;
+    top: 0;
+    right: 0;
+    
   @include mq(tablet) {
     width: 40%;
-    left: 60%;
+    // height: 100%;
+    // left: 60%;
   }
   @include mq(desktop) {
     display: none;
   }
 }
-
+.mobile-menu.is-open .header__button{
+  display: none;
+}
 .mobile-menu.is-open {
   position: fixed;
-
   opacity: 1;
   transform: translateX(0);
-  // transform: scale(1);
   @include mq(desktop) {
     display: none;
   }
