--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,29 +1,46 @@
-<header class="header section">
+<header class="header section" id="header">
   <div class="container">
     <div class="header-logo">
       <a class="header-logo" href="/index.html">
         <picture>
           <source
-            srcset="images/header/logos.webp 1x, images/header/logos@2x.webp 2x" media="(min-width: 1280px)" type="image/webp"/>
+            srcset="images/header/logos.webp 1x, images/header/logos@2x.webp 2x"
+            media="(min-width: 1280px)"
+            type="image/webp"
+          />
           <source
-            srcset="images/header/logos.png 1x, images/header/logos@2x.png 2x" media="(min-width: 1280px)" type="image/jpeg"/>
+            srcset="images/header/logos.png 1x, images/header/logos@2x.png 2x"
+            media="(min-width: 1280px)"
+            type="image/jpeg"
+          />
           <source
-            srcset="images/header/logos.webp 1x, images/header/logos@2x.webp 2x" media="(min-width: 767px)" type="image/webp"/>
+            srcset="images/header/logos.webp 1x, images/header/logos@2x.webp 2x"
+            media="(min-width: 767px)"
+            type="image/webp"
+          />
           <source
-            srcset="images/header/logos.png 1x, images/header/logos@2x.png 2x" media="(min-width: 767px)" type="image/jpeg"/>
+            srcset="images/header/logos.png 1x, images/header/logos@2x.png 2x"
+            media="(min-width: 767px)"
+            type="image/jpeg"
+          />
           <source
-            srcset="images/header/logos.webp 1x, images/header/logos@2x.webp 2x" media="(max-width: 768px)" type="image/webp"/>
+            srcset="images/header/logos.webp 1x, images/header/logos@2x.webp 2x"
+            media="(max-width: 768px)"
+            type="image/webp"
+          />
           <source
-            srcset="images/header/logos.png 1x, images/header/logos@2x.png 2x" media="(max-width: 768px)" type="image/jpeg"/>
-          <img src="images/header/logos.png" alt="logo ICECREAM" />
-           </picture
+            srcset="images/header/logos.png 1x, images/header/logos@2x.png 2x"
+            media="(max-width: 768px)"
+            type="image/jpeg"
+          />
+          <img src="images/header/logos.png" alt="logo ICECREAM" /> </picture
         ><span class="logo-text">ICECREAM</span>
       </a>
     </div>
     <nav class="nav-header">
       <ul class="header-nav">
         <li class="header-nav__items">
-          <a class="header-nav__links" href="#hero">Home</a>
+          <a class="header-nav__links" href="#header">Home</a>
         </li>
         <li class="header-nav__items">
           <a class="header-nav__links" href="#about">About us</a>
@@ -60,11 +77,11 @@
       </svg>
     </button>
     <ul class="mobile-nav">
-      <li class="mobile__item"><a class="mobile__links" href="#hero">Home</a></li>
+      <li class="mobile__item"><a class="mobile__links" href="#header">Home</a></li>
       <li class="mobile__item"><a class="mobile__links" href="#about">About us</a></li>
       <li class="mobile__item"><a class="mobile__links" href="#advantages">How it’s made?</a></li>
       <li class="mobile__item"><a class="mobile__links" href="#products">Our products</a></li>
-      <li class="mobile__item"><a class="mobile__links" href="#contacts">Contact</a></li>
+      <li class="mobile__item"><a class="mobile__links" href="#contact">Contact</a></li>
     </ul>
   </div>
 </header>
